# HPatches_descriptor_extractor

./: .gitignore  CMakeLists.txt
descriptor/: DSPSIFT.cpp  HoNC.cpp  VanillaSIFT.cpp  VanillaSIFT.h  averageScaledPooling.hpp  descriptorProcessor.hpp  extractor.hpp  parallelHoncExtractor.hpp  parallelSiftExtractor.hpp  scaledPooling.hpp
descriptorExtractor/: DSPSIFT.cpp  HoNC.cpp  HoNC.h  HoWH.cpp  HoWH.h  VanillaSIFT.cpp  VanillaSIFT.h  descriptorProcessor.cpp  descriptorProcessor.hpp  experimentConfig.hpp  extractor.hpp  hpatchesDescriptorExtractor.cpp  hpatchesDescriptorExtractor.hpp  main.cpp  parallelHoncExtractor.hpp  parallelSiftExtractor.hpp
keypoints/: VanillaSIFT.cpp  VanillaSIFT.h  logger.cpp  logger.hpp
